# FortranTuto

./: CMakeLists.txt  main.cpp
src/Cpp/: utils.cpp  utils.h
src/fortran/: 1_grayscale.f90  2_dynamique.f90  3_filters.f90  grayscale.f90  subroutines.h
